--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root {
-    --color-main: #3cc270;
+    --color-main: #3ec471;
+    --color-secundary: #c7f4ff;
 }
 
 body {
@@ -24,7 +25,7 @@ body {
 .login-form__image,
 .signup-form__image {
     padding: 10px;
-    border-left: 30px solid #3ec471;
+    border-left: 30px solid var(--color-main);
     border-radius: 50px;
 }
 
@@ -35,7 +36,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-right: 30px solid #c7f4ff;
+    border-right: 30px solid var(--color-secundary);
     border-radius: 50px;
 }
 
@@ -45,7 +46,7 @@ body {
     padding: 15px;
     border-radius: 30px;
     background-color: var(--color-main);
-    border-color: #19a558;
+    border-color: var(--color-main);
 }
 
 .login-form__btn-signup {
@@ -64,7 +65,7 @@ body {
     padding: 15px;
     border-radius: 30px;
     background-color: var(--color-main);
-    border-color: #19a558;
+    border-color: var(--color-main);
 }
 
 .signup-form__btn-login {
